--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
+  "aot":"true" ,
   "newProjectRoot": "projects",
   "projects": {
     "my-calender": {
@@ -27,7 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
             ],
             "scripts": []
           },
