--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ngcc --properties es2015 browser module main --first- only --create-ivy-entry-points"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +19,16 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.1",
+    "angular-calendar": "^0.29.0",
+    "angular-draggable-droppable": "6.1.0",
+    "angular-resizable-element": "5.0.0",
+    "angularx-flatpickr": "^6.6.0",
+    "bootstrap": "^5.1.3",
+    "calendar-utils": "0.9.0",
+    "date-fns": "^2.28.0",
+    "flatpickr": "4.6.9",
+    "rrule": "2.6.8",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
